Closed
Bug 1333934
Opened 8 years ago
Closed 8 years ago
Transform layer geometry only once
Categories
(Core :: Graphics: Layers, defect)
Core
Graphics: Layers
Tracking
()
RESOLVED
FIXED
mozilla54
People
(Reporter: mikokm, Assigned: mikokm)
References
()
Details
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
mattwoodrow
:
review+
gchang
:
approval-mozilla-aurora+
|
Details |
The transformation of layer geometry is done multiple times when there are nested ContainerLayers. This leads to invalid geometry in some cases.
Comment hidden (mozreview-request) |
Comment 2•8 years ago
|
||
mozreview-review |
Comment on attachment 8830548 [details]
Bug 1333934 - Transform layer geometry only once
https://reviewboard.mozilla.org/r/107298/#review108422
Attachment #8830548 -
Flags: review?(matt.woodrow) → review+
Comment hidden (mozreview-request) |
Assignee | ||
Comment 4•8 years ago
|
||
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a3fc19cd30d8
Transform layer geometry only once r=mattwoodrow
Keywords: checkin-needed
Comment 6•8 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Comment 7•8 years ago
|
||
Miko, can you request uplift in this bug also since you mention it should go with bug 1335159 to aurora?
Flags: needinfo?(mikokm)
Updated•8 years ago
|
status-firefox53:
--- → ?
Assignee | ||
Comment 8•8 years ago
|
||
Comment on attachment 8830548 [details]
Bug 1333934 - Transform layer geometry only once
Approval Request Comment
[Feature/Bug causing the regression]: Plane splitting implementation for OpenGL (bug 1286716, bug 689498)
[User impact if declined]: Webpages with elements that have nested CSS 3D transforms might show incorrectly.
[Is this code covered by automated tests?]: Yes, the patch adds a reftest for the specific problem encountered. Also the previous reftest suite testing 3D CSS transforms covers this code and passes.
[Has the fix been verified in Nightly?]: Yes, I have verified that the fix works in Nightly.
[Needs manual test from QE? If yes, steps to reproduce]: Optional - there is an automated reftest. Manual testing can be done by visiting http://www.simulationcurriculum.com/ and comparing the carousel transition with other browsers. Previously the last two stripes of the transition animation were rotating incorrectly.
[List of other uplifts needed for the feature/fix]: Bug 1335159
[Is the change risky?]: Medium.
[Why is the change risky/not risky?]: Similarly to bug 1335159, this change affects all the CSS 3D transforms.
[String changes made/needed]: None.
Flags: needinfo?(mikokm)
Attachment #8830548 -
Flags: approval-mozilla-aurora?
Updated•8 years ago
|
Comment 9•8 years ago
|
||
Comment on attachment 8830548 [details]
Bug 1333934 - Transform layer geometry only once
This is required to fix bug 1335159. Aurora53+.
Attachment #8830548 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 10•8 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•