Bug 1333934 - Transform layer geometry only once r=mattwoodrow a=gchang

MozReview-Commit-ID: BmJrPf6a6YH